# wca-organizer-tools

./: CLAUDE.md  README.md  analysis.py  common.py  main.py  pyproject.toml  requirements.txt  wca.py
.streamlit/: secrets.toml.example
pages/: 1_home.py  2_competition_analysis.py  3_competition_summary.py  competition_analysis.py  competition_summary.py  home.py  name_badges.py
scripts/: generate_chinchina_person_qr.py
services/: __init__.py
ui/: __init__.py  cards.py
wca_tools/: __init__.py  analysis.py  badges.py  cards.py  config.py  events.py  formatting.py  results.py  wca.py
